Fix letters visible when they should not

--- a/src/app.scss
+++ b/src/app.scss
@@ -28,6 +28,7 @@
       background-color: white; 
       overflow: hidden;
       cursor: pointer;
+      position: relative;
     }
 
     .c, .f {
